--- a/templates/etc/haproxy/haproxy-default.cfg.j2
+++ b/templates/etc/haproxy/haproxy-default.cfg.j2
@@ -9,7 +9,7 @@ defaults
 {% endif %}
     maxconn     {{ haproxy_default_maxconn | default('4000') }}
     retries     {{ haproxy_default_retries |default('3') }}
-{% if haproxy_default_fullconn is defined and haproxy_default_fullconn|length %}
+{% if haproxy_default_fullconn | default(False) %}
     fullconn    {{ haproxy_default_fullconn }}
 {% endif %}
 {% if haproxy_default_balance is defined and  haproxy_default_balance|length %}
@@ -33,7 +33,7 @@ defaults
 {% endif %}
 {% if haproxy_default_errorfiles is defined and haproxy_default_errorfiles|length %}
     {% for errorfile in haproxy_default_errorfiles %}
-    errorfile        {{ errorfile }}
+    errorfile   {{ errorfile }}
     {% endfor %}
 {% endif %}
 {% if haproxy_default_mode is defined and haproxy_default_mode | length > 0 %}
