--- a/templates/etc/haproxy/haproxy-frontend.cfg.j2
+++ b/templates/etc/haproxy/haproxy-frontend.cfg.j2
@@ -114,6 +114,9 @@ frontend {{ name }}
             {% if value.unique_id_format is defined %}
     unique-id-format {{ value.unique_id_format }}
             {% endif %}
+            {% if value.log_format is defined %}
+    log-format {{ value.log_format }}
+            {% endif %}
             {% if value.errorfiles is defined %}
                 {% for errorfile in value.errorfiles %}
     errorfile   {{ errorfile }}
